--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/jamesea/nodehub-01#readme",
   "dependencies": {
     "art-template": "^4.12.2",
+    "blueimp-md5": "^2.10.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-art-template": "^1.0.0",
     "jquery": "^3.3.1",
+    "moment": "^2.20.1",
     "mysql": "^2.15.0"
   }
 }
