--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-art-template": "^1.0.0",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "jquery-form": "^4.2.2",
     "moment": "^2.20.1",
     "mysql": "^2.15.0"
   }
