--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-art-template": "^1.0.0",
+    "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "jquery-form": "^4.2.2",
